# devices

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/yaxiu/devices/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  SocketServerListener.cpp  SocketServerListener.h  native-lib.cpp
app/src/main/cpp/hpsocket/: JavaVm.h
app/src/main/cpp/utils/: _onload.cpp  utilbase.cpp  utilbase.h
app/src/main/java/com/cf/cf685/: Video.kt
app/src/main/java/com/cf/cf685/wifi/: DevGroup.java  TcpSender.java
app/src/main/java/com/meicet/network_hp/: ApiNet.kt
app/src/main/java/com/yaxiu/devices/: App.kt  MainActivity.kt
app/src/main/java/com/yaxiu/devices/utils/: ImageUtils.java
app/src/main/java/com/yaxiu/devices/widget/: CameraContainerLayout.kt  CameraView.kt
app/src/main/java/com/yaxiu/devices/widget/listener/: ApiNetStateCallback.kt  FrameDataCallback.kt  ICameraState.kt
app/src/main/res/layout/: activity_main.xml  camera_layout.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/yaxiu/devices/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
